fix scrollbar

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -708,6 +708,8 @@ iframe {
     display: -webkit-inline-box;
     display: -ms-inline-flexbox;
     display: inline-flex; }
+    .feature-mcontainer ::-webkit-scrollbar {
+      width: 0px; }
   .feature-item {
     z-index: 2;
     padding-left: 15px;
@@ -751,14 +753,12 @@ iframe {
 
 /* Hide scrollbar for Chrome, Safari and Opera */
 .feature-mcontainer::-webkit-scrollbar {
-  display: none; }
+  width: 0; }
 
 /* Hide scrollbar for IE, Edge and Firefox */
 .feature-mcontainer {
   -ms-overflow-style: none;
-  /* IE and Edge */
-  scrollbar-width: none;
-  /* Firefox */ }
+  /* IE and Edge */ }
 
 .swiper {
   width: 100%;
