--- a/assets/scss/_about.scss
+++ b/assets/scss/_about.scss
@@ -52,6 +52,9 @@
     }
     &-mcontainer {
         display: inline-flex;
+        ::-webkit-scrollbar {
+            width: 0px;
+          }
     }
     &-item {
         z-index: 2;
@@ -104,12 +107,13 @@
 
 /* Hide scrollbar for Chrome, Safari and Opera */
 .feature-mcontainer::-webkit-scrollbar {
-display: none;
+    width: 0;
+// display: none;
 }
 /* Hide scrollbar for IE, Edge and Firefox */
 .feature-mcontainer {
     -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
+    // scrollbar-width: none;  /* Firefox */
 }
 
 
